
    Resumes recording of the stream. If replay is true, then the buffer
    will be applied.

    * ``State.freeze_while(fun)``

    Apply function. Freezes the stream before the function,
    and replays the buffer when the function returns.

* :meth:`EventReceiver.capture <celery.events.EventReceiver.capture>`
  Now supports a timeout keyword argument.

Fixes
-----

* Compat ``LoggerAdapter`` implementation: Now works for Python 2.4.

    Also added support for several new methods:
    ``fatal``, ``makeRecord``, ``_log``, ``log``, ``isEnabledFor``,
    ``addHandler``, ``removeHandler``.

Documentation
-------------

* tutorials/external moved to new section: "community"

2.0.3
=====
:release-date: 2010-08-27 12:00 P.M CEST

Fixes
-----

* celeryd: Properly handle connection errors happening while
  closing consumers.

* celeryd: Events are now buffered if the connection is down,
  then sent when the connection is re-established.

* No longer depends on the ``mailer`` package.

    This package had a namespace collision with ``django-mailer``,
    so its functionality was replaced.

* Redis result backend: Documentation typos: Redis doesn't have
  database names, but database numbers. The default database is now 0.

* :class:`~celery.task.control.inspect`:
  ``registered_tasks`` was requesting an invalid command because of a typo.

    See http://github.com/ask/celery/issues/issue/170

* ``CELERY_ROUTES``: Values defined in the route should now have precedence
  over values defined in ``CELERY_QUEUES`` when merging the two.

    With the follow settings::

        CELERY_QUEUES = {"cpubound": {"exchange": "cpubound",
                                      "routing_key": "cpubound"}}

        CELERY_ROUTES = {"tasks.add": {"queue": "cpubound",
                                       "routing_key": "tasks.add",
                                       "serializer": "json"}}

    The final routing options for ``tasks.add`` will become::

        {"exchange": "cpubound",