@@ -1,4 +1,4 @@
-:Version: 2.1.0a2
+:Version: 2.1.0a5
 :Web: http://celeryproject.org/
 :Download: http://pypi.python.org/pypi/celery/
 :Source: http://github.com/ask/celery/
